# High-PepBinder

./: .gitignore  LICENSE  README.md  pyproject.toml  target_sequence.csv
configs/: gen.yaml  train.frag.yaml  train.pep.yaml  train.yaml  train2.yaml  train_affinity.yaml
datasets/: PepPBA-PepLand-source Dataset.csv  PepPBA-paper-source.csv  README.md
src/astra/tokenizers/esm/: tokenization.py
src/pepldm/: lightning.py  main.py  tokenizer.py  utils.py
src/pepldm/base/: __init__.py  callbacks.py  mixin.py
src/pepldm/esmc/: __init__.py  configuration_esmc.py  modeling_esmc.py
src/pepldm/pepldm/: __init__.py  configuration_pepldm.py  modeling_pepldm.py
